--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">PhrasePad</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="add_phrase">Add Phrase</string>
     <string name="add_phrase_title">Add new phrase</string>
     <string name="save">Save</string>
 
