--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">PhrasePad</string>
+    <string name="phrases">Phrases</string>
+    <string name="search">Search</string>
+    <string name="quiz">Quizzes</string>
     <string name="title_activity_settings">Settings</string>
     <string name="add_phrase">Add Phrase</string>
     <string name="add_phrase_title">Add new phrase</string>
@@ -7,6 +10,7 @@
 
     <!-- Preference Titles -->
     <string name="languages_header">Languages</string>
+    <string name="notifications_header">Learning Notifications</string>
     <string name="display_header">Display</string>
     <string name="data_manage_header">Data Mangement</string>
 
@@ -14,10 +18,17 @@
     <string name="source_language">Source language</string>
     <string name="destination_language">Destination language</string>
 
+    <!-- Notifications Preferences -->
+    <string name="notifications">Send daily quiz notifications</string>
+    <string name="notifications_summary">Remind you to do a quiz every day at noon</string>
+
     <!-- Display Preferences -->
-    <string name="always_english">Always use English</string>
-    <string name="always_english_summary">Always use English for language names</string>
+    <string name="always_dev_lang">Always use device language</string>
+    <string name="always_dev_lang_summary">Use your native device language for all language names, instead of their native names</string>
     <string name="theme">App theme</string>
+    <string name="theme_sys_default">System default</string>
+    <string name="theme_light">Light</string>
+    <string name="theme_dark">Dark</string>
 
     <!-- Data Management Preferences -->
     <string name="clear_all">Reset phrase book</string>
