Adding delete dialog to language change
Still a bit buggy...

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">PhrasePad</string>
     <string name="title_activity_settings">Einstellungen</string>
     <string name="add_phrase">Phrase Hinzufügen</string>
     <string name="add_phrase_title">Neue Phrase Hinzufügen</string>
@@ -13,7 +12,7 @@
     <string name="always_dev_lang">Verwenden Sie immer die Gerätesprache</string>
     <string name="always_dev_lang_summary">Verwenden Sie Ihre Muttersprache für alle Sprachnamen anstelle ihrer Mutternamen</string>
     <string name="theme">Thema</string>
-    <string name="clear_all">Sprachführer zurücksetzen</string>
+    <string name="clear_all">PhraseBook zurücksetzen</string>
     <string name="clear_all_summary">Dadurch wird Ihr Sprachführer gelöscht. Alle Sätze werden gelöscht!</string>
     <string name="phrases">Sätze</string>
     <string name="search">Suche</string>
@@ -25,4 +24,8 @@
     <string name="notifications">Senden Sie tägliche Quizbenachrichtigungen</string>
     <string name="notifications_summary">Erinnern Sie Sie daran, jeden Tag mittags ein Quiz zu machen</string>
     <string name="hello_blank_fragment">Hallo leeres Fragment</string>
+    <string name="language_changed_cleared">PhraseBook gelöscht!</string>
+    <string name="language_changed_delete">Löschen</string>
+    <string name="language_changed_message">Sie können die Phrasen für später in Ihrem Phrasenbuch speichern. Wählen Sie einfach das Sprachpaar erneut aus. Oder Sie können Ihr Sprachführer löschen und erneut starten.</string>
+    <string name="language_changed_header">Sprachpaar geändert</string>
 </resources>
