--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="language_changed_header">Language pair changed</string>
     <string name="language_changed_message">You can save the phrases in your PhraseBook for later, just reselect the language pair. Or you can clear your PhraseBook and start again.</string>
     <string name="language_changed_delete">Delete</string>
-    <string name="language_changed_cleared">PhraseBook cleared!</string>
+    <string name="language_changed_cleared">Phrase book cleared</string>
 
     <!-- Notifications Preferences -->
     <string name="notifications">Send daily quiz notifications</string>
@@ -42,14 +42,14 @@
 
     <!-- Display Preferences -->
     <string name="always_dev_lang">Always use device language</string>
-    <string name="always_dev_lang_summary">Use your native device language for all language names, instead of their native names</string>
+    <string name="always_dev_lang_summary">Use your device language for all language names, instead of their native names</string>
     <string name="theme">App theme</string>
     <string name="theme_sys_default">System default</string>
     <string name="theme_light">Light</string>
     <string name="theme_dark">Dark</string>
 
     <!-- Data Management Preferences -->
-    <string name="clear_all">Reset PhraseBook</string>
+    <string name="clear_all">Reset PhrasePad</string>
     <string name="clear_all_summary">This will clear all phrase books. All saved phrases will be deleted!</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
