Add notifications and fix data for quiz

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,41 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="phrases">Frasi</string>
-    <string name="search">Ricerca</string>
+    <string name="search">Cerca</string>
     <string name="quiz">Quiz</string>
     <string name="title_activity_settings">Impostazioni</string>
     <string name="add_phrase">Aggiungi Frase</string>
-    <string name="add_phrase_title">Aggiungi nuova Frase</string>
+    <string name="add_phrase_title">Aggiungi nuova frase</string>
     <string name="save">Salva</string>
-    <string name="languages_header">Le lingue</string>
+    <string name="languages_header">Lingue</string>
     <string name="display_header">Schermo</string>
-    <string name="data_manage_header">Gestione dei dati</string>
-    <string name="source_language">Linguaggio del codice</string>
-    <string name="destination_language">Lingua di destinazione</string>
-    <string name="always_dev_lang">Usa sempre la lingua del dispositivo</string>
-    <string name="always_dev_lang_summary">Usa la lingua del tuo dispositivo per tutti i nomi di lingua, invece dei nomi nativi</string>
-    <string name="theme">Tema dell\'app</string>
-    <string name="clear_all">Reimposta PhraseBook</string>
-    <string name="clear_all_summary">Questo cancellerà il tuo frasario. Tutte le frasi verranno eliminate!</string>
-    <string name="hello_blank_fragment">Ciao frammento vuoto</string>
-    <string name="notifications_header">Notifiche di apprendimento</string>
-    <string name="notifications">Invia notifiche di quiz giornaliere</string>
+    <string name="data_manage_header">Gestione dati</string>
+    <string name="always_dev_lang_summary">Utilizzare la lingua di sistema per tutti i nomi di lingua invece dei loro nomi nativi</string>
+    <string name="theme">Tema app</string>
+    <string name="clear_all">Reimposta PhrasePad</string>
+    <string name="clear_all_summary">Questo cancellerà tutti i frasari. Tutte le frasi salvate verranno cancellati!</string>
+    <string name="notifications">Invia notifiche di quiz quotidianamente</string>
     <string name="notifications_summary">Ricordati di fare un quiz ogni giorno a mezzogiorno</string>
-    <string name="theme_sys_default">Default del sistema</string>
+    <string name="theme_sys_default">Predefinito di sistema</string>
     <string name="theme_light">Chiaro</string>
     <string name="theme_dark">Scuro</string>
-    <string name="language_changed_header">La coppia linguistica è cambiata</string>
-    <string name="language_changed_message">Puoi salvare le frasi nel tuo PhraseBook per dopo, basta riselezionare la coppia di lingue. Oppure puoi cancellare il tuo PhraseBook e ricominciare.</string>
     <string name="language_changed_delete">Elimina</string>
-    <string name="language_changed_cleared">PhraseBook cancellato!</string>
-    <string name="set_language_message">Per iniziare a utilizzare PhrasePad, imposta le lingue di origine e di destinazione. Puoi modificarli in qualsiasi momento nelle Impostazioni.</string>
-    <string name="set_language_header">Imposta la lingua</string>
+    <string name="language_changed_cleared">Frasario cancellato</string>
+    <string name="set_language_message">Per iniziare a utilizzare PhrasePad, imposta la lingua di origine e di destinazione. Queste possono essere modificate in qualsiasi momento in Impostazioni.</string>
+    <string name="set_language_header">Imposta lingua</string>
     <string name="phrase_entry_error">Inserisci una frase</string>
     <string name="set_language_error">Seleziona una lingua</string>
     <string name="yes">Sì</string>
     <string name="no">No</string>
-    <string name="start_quiz">Inizia il quiz</string>
+    <string name="start_quiz">Inizia quiz</string>
     <string name="quiz_exit_early">Uscire dal quiz?</string>
-    <string name="quiz_exit_early_message">I tuoi progressi attuali andranno persi!</string>
-    <string name="quiz_your_score">il tuo punteggio è</string>
+    <string name="quiz_exit_early_message">Il progresso corrente verrà perso!</string>
+    <string name="quiz_your_score">Il tuo punteggo è</string>
+    <string name="notification_title">Tempo di quiz!</string>
+    <string name="notification_content">Fai il tuo quiz quotidiano con frasi ora</string>
 </resources>
