--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,41 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <string name="title_activity_settings">Einstellungen</string>
-    <string name="add_phrase">Phrase Hinzufügen</string>
-    <string name="add_phrase_title">Neue Phrase Hinzufügen</string>
-    <string name="save">Sparen</string>
-    <string name="languages_header">Sprachen</string>
-    <string name="display_header">Anzeige</string>
-    <string name="data_manage_header">Datenmanagement</string>
-    <string name="source_language">Ausgangssprache</string>
-    <string name="destination_language">Zielsprache</string>
-    <string name="always_dev_lang">Verwenden Sie immer die Gerätesprache</string>
-    <string name="always_dev_lang_summary">Verwenden Sie Ihre Muttersprache für alle Sprachnamen anstelle ihrer Mutternamen</string>
-    <string name="theme">Thema</string>
-    <string name="clear_all">PhraseBook zurücksetzen</string>
-    <string name="clear_all_summary">Dadurch wird Ihr Sprachführer gelöscht. Alle Sätze werden gelöscht!</string>
-    <string name="phrases">Sätze</string>
-    <string name="search">Suche</string>
-    <string name="quiz">Quiz</string>
-    <string name="theme_sys_default">Systemfehler</string>
-    <string name="theme_light">Licht</string>
-    <string name="theme_dark">Dunkel</string>
-    <string name="notifications_header">Lernbenachrichtigungen</string>
-    <string name="notifications">Senden Sie tägliche Quizbenachrichtigungen</string>
-    <string name="notifications_summary">Erinnern Sie Sie daran, jeden Tag mittags ein Quiz zu machen</string>
-    <string name="hello_blank_fragment">Hallo leeres Fragment</string>
-    <string name="language_changed_cleared">PhraseBook gelöscht!</string>
-    <string name="language_changed_delete">Löschen</string>
-    <string name="language_changed_message">Sie können die Phrasen für später in Ihrem Phrasenbuch speichern. Wählen Sie einfach das Sprachpaar erneut aus. Oder Sie können Ihr Sprachführer löschen und erneut starten.</string>
-    <string name="language_changed_header">Sprachpaar geändert</string>
-    <string name="set_language_header">Sprache einstellen</string>
-    <string name="set_language_message">Um PhrasePad zu verwenden, legen Sie Ihre Quell- und Zielsprache fest. Sie können diese jederzeit in den Einstellungen ändern.</string>
-    <string name="phrase_entry_error">Bitte geben Sie eine Phrase ein</string>
-    <string name="set_language_error">Bitte wähle eine Sprache</string>
-    <string name="yes">Ja</string>
-    <string name="no">Nein</string>
-    <string name="start_quiz">Starten Sie das Quiz</string>
-    <string name="quiz_exit_early">Quiz beenden?</string>
-    <string name="quiz_exit_early_message">Ihr aktueller Fortschritt geht verloren!</string>
-    <string name="quiz_your_score">Dein Ergebnis ist</string>
-</resources>
+<resources></resources>
