--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,41 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <string name="phrases">Фразы</string>
-    <string name="search">Поиск</string>
-    <string name="quiz">Викторины</string>
-    <string name="title_activity_settings">Настройки</string>
-    <string name="add_phrase">Добавить фразу</string>
-    <string name="add_phrase_title">Добавить новую фразу</string>
-    <string name="save">Сохранить</string>
-    <string name="languages_header">Языки</string>
-    <string name="display_header">Дисплей</string>
-    <string name="data_manage_header">Управление данными</string>
-    <string name="source_language">Язык источника</string>
-    <string name="destination_language">Язык назначения</string>
-    <string name="always_dev_lang">Всегда использовать язык устройства</string>
-    <string name="always_dev_lang_summary">Используйте свой родной язык устройства для всех названий языков вместо их родных названий</string>
-    <string name="theme">Тема</string>
-    <string name="clear_all">Сбросить разговорник</string>
-    <string name="clear_all_summary">Это очистит ваш разговорник. Все фразы будут удалены!</string>
-    <string name="hello_blank_fragment">Привет пустой фрагмент</string>
-    <string name="notifications_header">Уведомления об обучении</string>
-    <string name="notifications">Отправлять ежедневные уведомления о викторинах</string>
-    <string name="notifications_summary">Напоминать вам делать викторину каждый день в полдень</string>
-    <string name="theme_sys_default">Системные установки по умолчанию</string>
-    <string name="theme_light">Свет</string>
-    <string name="theme_dark">тема</string>
-    <string name="language_changed_cleared">Разговорник очищен!</string>
-    <string name="language_changed_delete">удалять</string>
-    <string name="language_changed_message">Вы можете сохранить фразы в разговорнике на будущее, просто повторно выберите языковую пару. Или вы можете очистить свой разговорник и начать заново.</string>
-    <string name="language_changed_header">Языковая пара изменена</string>
-    <string name="set_language_header">Установить язык</string>
-    <string name="set_language_message">Чтобы начать пользоваться PhrasePad, установите исходный и целевой языки. Вы можете изменить их в любое время в настройках.</string>
-    <string name="set_language_error">Пожалуйста, выберите язык</string>
-    <string name="phrase_entry_error">Пожалуйста, введите фразу</string>
-    <string name="yes">да</string>
-    <string name="no">Нет</string>
-    <string name="quiz_your_score">Your score is</string>
-    <string name="quiz_exit_early_message">Ваш текущий прогресс будет потерян!</string>
-    <string name="quiz_exit_early">Выйти из викторины?</string>
-    <string name="start_quiz">Начать викторину</string>
-</resources>
+<resources></resources>
