--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="ok">OK</string>
+    <string name="finish">Finish</string>
 
     <!-- Notifications -->
     <string name="notification_title">Quiz time!</string>
@@ -27,11 +28,15 @@
 
     <!-- Quizzes -->
     <string name="start_quiz">Start quiz</string>
+    <string name="end_quiz">End quiz</string>
+    <string name="quiz_incorrect">Incorrect answer :(</string>
     <string name="quiz_exit_early">Exit quiz?</string>
     <string name="quiz_exit_early_message">Your current progress will be lost!</string>
     <string name="quiz_your_score">Your score is: %1$d</string>
     <string name="start_quiz_error_title">No phrases!</string>
     <string name="start_quiz_error_message">You need to add some phrases in order to take a quiz.</string>
+    <string name="quiz_complete_title">Quiz complete!</string>
+    <string name="quiz_complete_message">Your score was %1$d out of %2$d</string>
 
     <!-- Preference Titles -->
     <string name="languages_header">Languages</string>
