--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="no">No</string>
     <string name="ok">OK</string>
     <string name="finish">Finish</string>
+    <string name="deleted">\"%1$s\" deleted</string>
 
     <!-- Notifications -->
     <string name="notification_title">Quiz time!</string>
@@ -24,14 +25,13 @@
     <string name="set_language_error">Select a language</string>
     <string name="set_sample">Sample PhrasePad</string>
     <string name="set_sample_dialog_title">Use sample database and phrases?</string>
-    <string name="set_sample_dialog_message">You can start PhrasePad with a pre-defined set of phrases between English and Welsh. This is a great way to demo functionality without needing to input data. Refresh the list to view the sample phrases.</string>
+    <string name="set_sample_dialog_message">You can start PhrasePad with a pre-defined set of phrases between English and Welsh.\n\nThis is a great way to demo functionality without needing to input data. Refresh the list to view the sample phrases.</string>
 
     <!-- Quizzes -->
     <string name="start_quiz">Start quiz</string>
     <string name="end_quiz">End quiz</string>
     <string name="quiz_incorrect">Incorrect answer :(</string>
     <string name="quiz_exit_early">Exit quiz?</string>
-    <string name="quiz_exit_early_message">Your current progress will be lost!</string>
     <string name="quiz_your_score">Your score is: %1$d</string>
     <string name="start_quiz_error_title">No phrases!</string>
     <string name="start_quiz_error_message">You need to add some phrases in order to take a quiz.</string>
@@ -67,9 +67,5 @@
     <!-- Data Management Preferences -->
     <string name="clear_all">Reset PhrasePad</string>
     <string name="clear_all_summary">This will clear all phrase books. All saved phrases will be deleted!</string>
-    <string name="clear_all_dialog_message">All saved phrases will be deleted and settings will be reset to default. This cannot be undone!
-
-        The app will close to complete the reset.</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="clear_all_dialog_message">All saved phrases will be deleted and settings will be reset to default.\n\nThis cannot be undone! The app will close to complete the reset.</string>
 </resources>
